# humanlog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  conf.py  index.rst  modules.rst
nicelog/: __init__.py  core.py  render.py
src/humanlog/: __init__.py  core.py  detect.py  render.py
tests/: test_core.py  test_detect.py  test_render.py
