[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanlog"
version = "0.1.0"
description = "One-line progress + logging for humans."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "humanlog"}]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["humanlog"]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "sphinx>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
