[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanlog"
version = "0.1.0"
description = "One-line progress + logging for humans."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "srichs", email = "srichs@pm.me"},
]
license = {text = "MIT"}
keywords = ["logging", "cli", "progress", "terminal", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/srichs/humanlog"
Repository = "https://github.com/srichs/humanlog"
Issues = "https://github.com/srichs/humanlog/issues"
Changelog = "https://github.com/srichs/humanlog/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["humanlog"]


[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "sphinx>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
